<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:key="preference_user_name"
                        android:title="@string/preference_user_name_title"
                        android:summary="@string/preference_user_name_summary" />
    <EditTextPreference
        android:key="preference_user_name"
        android:summary="@string/preference_user_password_summary"
        android:title="@string/preference_user_password_title"/>
    <ListPreference
        android:key="preference_main_bg_color"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"
        android:title="@string/preference_main_bg_color_title"
        android:summary="@string/preference_main_bg_color_summary"/>



</PreferenceScreen>